    * Fixed a bug that caused the auto-init system to fold multiple foreign
      keys that reference the same remote key into a single multi-column
      foreign key.  (Reported by Marlon Bailey)
    * Fixed a Manager bug that caused count queries to use incorrect
      table aliases when passed empty with_objects or require_objects
      array reference values.  (Reported by Denis Moskowitz)
    * The use_key parameter to load() now dies if an invalid key is passed.
      (Reported by Jonathan Vanasco)

0.764 (05.04.2007) - John Siracusa <siracusa@mindspring.com>

    * Added the strip() helper method.
    * Added a "find" method type to many-to-many relationships.
    * Added a "count" method type to ...-to-many relationships.
    * Added support for nested joins.
    * The setup() method now supports a "helpers" shortcut for importing
      methods from Rose::DB::Object::Helpers.
    * Added the dubious require_primary_key parameter and object attribute
      to the Loader.  (Requested by Teodor Zlatanov)
    * Added two syntaxes for literal SQL to QueryBuilder.
    * Added the with_column_triggers attribute to foreign keys and singular
      relationships in order to keep columns and related objects in sync.
    * Fixed a bug that caused some optional related objects to be improperly
      transformed into required objects.  (Reported by Ethan Rowe)
    * Improved detection of errors when auto-loading related classes.
    * Duplicate auto-created map record method names are now detected and 
      reported as a fatal error.
    * Added and documented a return value for add_columns().
    * Added module_preamble and module_postamble features to the Loader's
      make_modules() method.  (Patch by David Christensen)
    * Made changes_only, cascade, and prepare_cached arguments to save()
      also apply to *_on_save collections.
    * Added test and prerequisite version for a Rose::DB bug that